--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,7 +1,8 @@
 md-toolbar {
     position: absolute;
     top: 0;
-    left: 0; 
+    left: 0;
+    right: 0;
     display: flex;
     justify-content: space-between;
     i {
